[project]
name = "piperum"
version = "0.0.8"
description = "Handy subprocess runner with pipelines support."
keywords = ["bash", "pipeline", "run", "script", "sh", "shell", "subprocess"]
readme = "README.md"
license = {text="MIT License"}
authors = [
  {name = "Oleg Anufriev", email = "anufriev.o.m@gmail.com"}
]
maintainers = [
  {name = "Oleg Anufriev", email = "anufriev.o.m@gmail.com"}
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/temujin/piperum"
Repository = "https://github.com/temujin/piperum.git"

[build-system]
requires = ["setuptools>=73.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
