[tool.poetry]
name = "piperum"
version = "0.1.0"
description = "Handy subprocess runner with pipelines support."
homepage = "https://github.com/temujin/piperum"
repository = "https://github.com/temujin/piperum.git"
keywords = ["bash", "pipeline", "run", "script", "sh", "shell", "subprocess"]
readme = "README.md"
license = "MIT"

authors = ["Oleg Anufriev <anufriev.o.m@gmail.com>"]

maintainers = ["Oleg Anufriev <anufriev.o.m@gmail.com>"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: POSIX :: Linux",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Build Tools",
]


[project.urls]
Homepage = "https://github.com/temujin/piperum"
Repository = "https://github.com/temujin/piperum.git"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">= 3.11"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"


[tool.poetry.group.build.dependencies]
setuptools = "*"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
force-exclude = true

[tool.ruff.lint]
ignore = [
    "COM812", # Trailing comma missing
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "ANN002", # Missing type annotation for `*args`
    "ANN003", # Missing type annotation for `**kwargs`
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed
]

extend-select = [
    "I",
    "N",
    "PLR",
    "W",
    "UP",
    "COM",
    "Q",
    "ANN"
]


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
order-by-type = false
no-lines-before = ["local-folder"]


[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true


[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

#[tool.ruff.lint]
#select = ["E4", "E7", "E9", "F"]
#ignore = []
#fixable = ["ALL"]
#unfixable = []

#[tool.ruff.format]
#quote-style = "double"
#indent-style = "space"
#skip-magic-trailing-comma = false
#line-ending = "auto"
#docstring-code-format = false
#docstring-code-line-length = "dynamic"
